--- a/框架类/multids-spring-boot-starter/pom.xml
+++ b/框架类/multids-spring-boot-starter/pom.xml
@@ -9,6 +9,15 @@
     <version>1.1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
+    <properties>
+        <jdk.version>1.8</jdk.version>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
+    </properties>
+
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
