--- a/框架类/config-center/src/main/resources/application.yml
+++ b/框架类/config-center/src/main/resources/application.yml
@@ -1,5 +1,8 @@
 server:
   port: 8080
+  tomcat:
+    accesslog:
+      enabled: true
 spring:
   datasource:
     url: jdbc:mysql://47.109.56.234:3306/config_center?useUnicode=true&characterEncoding=UTF-8&useSSL=false
@@ -9,3 +12,9 @@ spring:
 mybatis:
   mapper-locations: classpath:mapping/*.xml
   type-aliases-package: cn.xwlin.entity
+logging:
+  level:
+    org:
+      apache:
+        tomcat: DEBUG
+        catalina: DEBUG
