--- a/框架类/config-server/pom.xml
+++ b/框架类/config-server/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>cn.xwlin</groupId>
-    <artifactId>config-center</artifactId>
+    <artifactId>config-server</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <parent>
@@ -43,11 +43,6 @@
             <version>8.0.21</version>
         </dependency>
         <dependency>
-            <groupId>com.github.binarywang</groupId>
-            <artifactId>wx-java-miniapp-spring-boot-starter</artifactId>
-            <version>4.4.0</version>
-        </dependency>
-        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.30</version>
@@ -57,6 +52,10 @@
             <artifactId>fastjson2</artifactId>
             <version>2.0.33</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>26.0-jre</version>
+        </dependency>
     </dependencies>
-
 </project>
