--- a/IoGame/iogame-broker/pom.xml
+++ b/IoGame/iogame-broker/pom.xml
@@ -31,4 +31,21 @@
         </dependency>
     </dependencies>
 
+    <repositories>
+        <!--        单项目maven仓库，只对当前项目有效-->
+        <repository>
+            <id>tencent</id>
+            <name>tencent maven</name>
+            <url>http://mirrors.cloud.tencent.com/nexus/repository/maven-public/</url>
+            <layout>default</layout>
+            <!-- 是否开启发布版构件下载 -->
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <!-- 是否开启快照版构件下载 -->
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 </project>
