--- a/IoGame/iogame-socket/pom.xml
+++ b/IoGame/iogame-socket/pom.xml
@@ -42,6 +42,10 @@
             <version>3.0.3</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.iohao.game</groupId>
             <artifactId>external-netty</artifactId>
             <version>21.7</version>
