--- a/IoGame/client/pom.xml
+++ b/IoGame/client/pom.xml
@@ -22,5 +22,22 @@
             <artifactId>fxgl</artifactId>
             <version>21.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.java-websocket</groupId>
+            <artifactId>Java-WebSocket</artifactId>
+            <version>1.5.3</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.iohao.game</groupId>
+            <artifactId>light-client</artifactId>
+            <version>21.7</version>
+        </dependency>
+
+        <dependency>
+            <groupId>cn.xwlin</groupId>
+            <artifactId>iogame-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
