--- a/BootStart/src/main/resources/application.yml
+++ b/BootStart/src/main/resources/application.yml
@@ -38,6 +38,16 @@ xwlin:
         max-wait: 60000
         validation-query: SELECT 1 FROM dual
         validation-query-time-out: 2000
+      ID_SEQ:
+        url: jdbc:mysql://mysql.sqlpub.com:3306/liaoxiang_seq?useUnicode=true&characterEncoding=UTF-8&useSSL=false
+        username: liaoxiang_seq
+        password: vHfA2EP6y8jhFyrr
+        init-size: 2
+        min-idle: 2
+        max-active: 2
+        max-wait: 60000
+        validation-query: SELECT 1 FROM dual
+        validation-query-time-out: 2000
 mybatis-plus:
   type-handlers-package: cn.xwlin.dao.typehandler
   mapper-locations: classpath:mapping/*.xml
