多数据源抽出来

--- a/BootStart/src/main/resources/application.yml
+++ b/BootStart/src/main/resources/application.yml
@@ -4,8 +4,8 @@ info:
   author: majiaxueyuan
 logging:
   level:
-    per.lx.controller: debug
-xwlin:
+    cn.xwlin.controller: debug
+dynamic:
   datasource:
     config:
       MASTER:
