--- a/框架类/config-server-starter/pom.xml
+++ b/框架类/config-server-starter/pom.xml
@@ -45,6 +45,11 @@
             <artifactId>fastjson2</artifactId>
             <version>2.0.33</version>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.9.2</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
