--- a/BootStart/pom.xml
+++ b/BootStart/pom.xml
@@ -108,6 +108,12 @@
             <artifactId>hutool-all</artifactId>
             <version>5.8.3</version>
         </dependency>
+
+        <dependency>
+            <groupId>cn.xwlin</groupId>
+            <artifactId>config-server-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
