--- a/BootStart/src/main/resources/application.yml
+++ b/BootStart/src/main/resources/application.yml
@@ -86,3 +86,9 @@ spring:
         max-active: 5
         max-wait: 30000
         min-idle: 2
+xwlin:
+  configcenter:
+    url: 127.0.0.1
+    port: 8899
+    app-code: order
+    module-code: order-web
