--- a/框架类/config-server/src/main/resources/application.yml
+++ b/框架类/config-server/src/main/resources/application.yml
@@ -9,6 +9,22 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: LIAOxiang941229
+  thymeleaf:
+    # 开启视图解析
+    enabled: true
+    #编码格式
+    encoding: UTF-8
+    #前缀配置
+    prefix: classpath:/templates/
+    # 后缀配置
+    suffix: .html
+    #是否使用缓存 开发环境时不设置缓存
+    cache: false
+    # 格式为 HTML 格式
+    mode: HTML5
+    # 配置类型
+    servlet:
+      content-type: text/html
 mybatis:
   mapper-locations: classpath:mapping/*.xml
   type-aliases-package: cn.xwlin.entity
