--- a/框架类/config-server/src/main/resources/application.yml
+++ b/框架类/config-server/src/main/resources/application.yml
@@ -5,10 +5,10 @@ server:
       enabled: true
 spring:
   datasource:
-    url: jdbc:mysql://server.xwlin.cn:3306/config_center?useUnicode=true&characterEncoding=UTF-8&useSSL=false
+    url: jdbc:mysql://mysql.sqlpub.com:3306/lx_appmodule?useUnicode=true&characterEncoding=UTF-8&useSSL=false
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
-    password: LIAOxiang941229
+    username: lx_appmodule
+    password: o4LJw001ZI6lw3wx
   thymeleaf:
     # 开启视图解析
     enabled: true
