--- a/BootStart/pom.xml
+++ b/BootStart/pom.xml
@@ -114,6 +114,12 @@
             <artifactId>config-server-starter</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>cn.xwlin</groupId>
+            <artifactId>multids-spring-boot-starter</artifactId>
+            <version>1.1.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
