--- a/BootStart/src/main/resources/application.yml
+++ b/BootStart/src/main/resources/application.yml
@@ -88,10 +88,12 @@ mybatis-plus:
 #    database: 0
 #    username: default
 #    password: EXvBawuiYuWvhMYxH1vbLWSMZgS4YwN8
+#    client-type: lettuce
 #    lettuce:
 #      pool:
 #        max-active: 5
-#        max-wait: 30000
+#        max-wait: 2
 #        min-idle: 2
+#        enabled: true
 sys:
   name: ZhangSan
