--- a/actuator4/src/main/resources/application.yml
+++ b/actuator4/src/main/resources/application.yml
@@ -16,5 +16,15 @@ logging:
     per.lx.controller: debug
 spring:
   redis:
-    host: 127.0.0.1
-    port: 6379
+    host: 1_39a859fe4d25.c.methodot.com
+    port: 31581
+    database: 0
+    username: default
+    password: EXvBawuiYuWvhMYxH1vbLWSMZgS4YwN8
+    client-type: lettuce
+    lettuce:
+      pool:
+        max-active: 5
+        max-wait: 2
+        min-idle: 2
+        enabled: true
