--- a/框架类/config-server-front/.env.production
+++ b/框架类/config-server-front/.env.production
@@ -2,5 +2,5 @@
 ENV = 'production'
 
 # base api
-VUE_APP_BASE_API = 'http://server.xwlin.cn:8899/'
+VUE_APP_BASE_API = 'https://server.config.xwlin.cn/'
 
